--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -22,6 +22,12 @@
       <li style="--i:2"><a href="#">Twitter</a></li>
       <li style="--i:3"><a href="#">Instagram</a></li>
     </ul>
+    <ul class="navigation">
+      <li style="--i:1"><a href="#">Home</a></li>
+      <li style="--i:2"><a href="#">About</a></li>
+      <li style="--i:3"><a href="#">Tour</a></li>
+      <li style="--i:4"><a href="#">Contact</a></li>
+    </ul>
   </section>
   <script type="text/javascript">
     function menuToggle() {
