--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -3,20 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Frosted Glass Effect</title>
+  <title>Calculator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section>
-    <h2>Frosted Glass</h2>
-    <div class="glass"></div>
-  </section>
-  <script>
-    document.addEventListener("mousemove", function(e) {
-      const glass = document.querySelector('.glass');
-      glass.style.left = e.offsetX + 'px';
-      glass.style.top = e.offsetY + 'px';
-    })
-  </script>
+  <div class="container">
+    <form class="calculator" name="calc">
+      <input type="text" readonly class="value" name="txt"/>
+      <span class="num" onclick="calc.txt.value = ''">c</span>
+      <span class="num" onclick="document.calc.txt.value += '/'">/</span>
+      <span class="num" onclick="document.calc.txt.value += '*'">*</span>
+      <span class="num" onclick="document.calc.txt.value += '7'">7</span>
+      <span class="num" onclick="document.calc.txt.value += '8'">8</span>
+      <span class="num" onclick="document.calc.txt.value += '9'">9</span>
+      <span class="num" onclick="document.calc.txt.value += '-'">-</span>
+      <span class="num" onclick="document.calc.txt.value += '4'">4</span>
+      <span class="num" onclick="document.calc.txt.value += '5'">5</span>
+      <span class="num" onclick="document.calc.txt.value += '6'">6</span>
+      <span class="num" onclick="document.calc.txt.value += '+'">+</span>
+      <span class="num" onclick="document.calc.txt.value += '1'">1</span>
+      <span class="num" onclick="document.calc.txt.value += '2'">2</span>
+      <span class="num" onclick="document.calc.txt.value += '3'">3</span>
+      <span class="num" onclick="document.calc.txt.value += '0'">0</span>
+      <span class="num" onclick="document.calc.txt.value += '.'">.</span>
+      <span class="num" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
+    </form>
+  </div>
 </body>
 </html>
