--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -9,32 +9,29 @@
 <body>
   <div class="container">
     <form class="calculator" name="calc">
-      <input type="text" readonly class="value" name="txt"/>
-      <span class="num dark" onclick="calc.txt.value = ''">AC</span>
-      <span
-        class="num dark"
-        onclick="calc.txt.value = calc.txt.value[0] === '-' ? calc.txt.value.slice(1) : '-' + calc.txt.value"
-      >+/-</span>
-      <span class="num dark" onclick="calc.txt.value = ''">%</span>
-      <!-- <span class="num colored" onclick="calc.txt.value += '÷'">÷</span> -->
-      <span class="num colored" onclick="calc.txt.value += '/'">/</span>
-      <span class="num" onclick="calc.txt.value += '7'">7</span>
-      <span class="num" onclick="calc.txt.value += '8'">8</span>
-      <span class="num" onclick="calc.txt.value += '9'">9</span>
-      <span class="num colored" onclick="calc.txt.value += '×'">×</span>
-      <span class="num" onclick="calc.txt.value += '4'">4</span>
-      <span class="num" onclick="calc.txt.value += '5'">5</span>
-      <span class="num" onclick="calc.txt.value += '6'">6</span>
-      <span class="num colored" onclick="calc.txt.value += '-'">-</span>
-      <span class="num" onclick="calc.txt.value += '1'">1</span>
-      <span class="num" onclick="calc.txt.value += '2'">2</span>
-      <span class="num" onclick="calc.txt.value += '3'">3</span>
-      <span class="num colored" onclick="calc.txt.value += '+'">+</span>
-      <span class="num zero" onclick="calc.txt.value += '0'">0</span>
-      <span class="num" onclick="calc.txt.value += '.'">.</span>
-      <span class="num colored" onclick="calc.txt.value = eval(calc.txt.value)">=</span>
+      <input type="text" class="value" name="txt" class="temp" value="0"/>
+      <span class="num dark" data-action="clear">AC</span>
+      <span class="num dark" data-action="sign">+/-</span>
+      <span class="num dark" data-action="percent">%</span>
+      <span class="num colored key--operator" data-action="divide">÷</span>
+      <span class="num">7</span>
+      <span class="num">8</span>
+      <span class="num">9</span>
+      <span class="num colored key--operator" data-action="multiply">×</span>
+      <span class="num">4</span>
+      <span class="num">5</span>
+      <span class="num">6</span>
+      <span class="num colored key--operator" data-action="subtract">-</span>
+      <span class="num">1</span>
+      <span class="num">2</span>
+      <span class="num">3</span>
+      <span class="num colored key--operator" data-action="add">+</span>
+      <span class="num zero">0</span>
+      <span class="num" data-action="decimal">.</span>
+      <span class="num colored key--equals" data-action="evaluate">=</span>
     </form>
   </div>
+  <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript" src="vanilla-tilt.js"></script>
   <script>
     VanillaTilt.init(document.querySelectorAll(".container"), {
